[package]
name = "requester"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui = "0.27.2"
eframe = "0.27.2"
env_logger = { version = "0.10", default-features = false, features = [
    "auto-color",
    "humantime",
] }
anyhow = "1.0.86"
reqwest = "0.12.4"
